--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,289 @@
+/* Homepage */
+
+.home-body {
+    font-family: 'Mukta', sans-serif;
+}
+
+a {
+
+    text-decoration: none;
+}
+
+
+.top-container {
+    width: 100vw;
+    height: 100vh;
+
+
+}
+
+.logo {
+
+    height: 70px;
+    padding-top: 10px;
+
+}
+
+nav {
+
+    display: flex;
+    justify-content: start;
+    padding: 7px 0 7px 30px;
+}
+
+.links {
+
+    display: flex;
+    width: 500px;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 50px;
+    /* font-family: 'Mukta', sans-serif; */
+
+    /* position: absolute;
+    right: 100px;
+    top: 20px; */
+    font-size: 1.2rem;
+}
+
+.nav-link {
+    color: black;
+
+}
+
+.nav-link:after {
+    display: block;
+    content: '';
+    border-bottom: solid 3px #BE9639;
+    transform: scaleX(0);
+    transition: transform 250ms ease-in-out;
+}
+
+
+.nav-link:hover:after {
+    transform: scaleX(1);
+}
+
+.nav-link:after {
+    transform-origin: 0% 50%;
+}
+
+
+.social-links {
+
+    display: flex;
+    position: absolute;
+    right: 2%;
+    justify-content: center;
+    align-items: center;
+    padding-top: 20px;
+}
+
+.sl-contacts{
+    display: flex;
+    
+    justify-content: center;
+    align-items: center;
+    padding-top: 10px;
+}
+
+.main-section {
+
+    display: flex;
+    flex-direction: column;
+
+}
+
+
+
+.welcome-msg {
+   
+    font-family: 'Advent Pro', sans-serif;
+    
+    font-size: 2rem;
+    text-align: center;
+    padding: 50px 100px 0 100px;
+
+
+
+
+}
+
+.info {
+    
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+}
+
+
+
+.top {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.coffee-img {
+
+    height: 100vh;
+    justify-self: end;
+    
+}
+
+
+.contact-container {
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+}
+
+.box {
+
+    margin-top: 50px;
+    border: solid 3px black;
+    width: 15%;
+
+    align-items: flex-end;
+    margin: 50px 80px;
+    font-size: 1rem;
+    padding: 0 100px;
+
+}
+
+.logo2 {
+    height: 200px;
+    margin: auto;
+}
+
+
+
+
+.menu-header {
+
+    text-align: center;
+}
+
+.buttons {
+    display: flex;
+    justify-content: center;
+    
+
+
+}
+
+.menu-btn {
+    
+    font-size: 1rem;
+    margin:30px;
+    padding:5px 30px;
+    border-radius: 15px;
+    border: 3px solid #BE9639;
+    text-decoration: none;
+    color: black;
+    transition: 0.5s;
+}
+
+.menu-btn:hover {
+    background-color: #BE9639;
+    color: #efefef;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.day {
+    display: flex;
+    justify-content: space-between;
+   
+
+}
+
+.email {
+    color: black;
+    text-decoration: underline;
+}
+
+
+
+
+
+
+footer {
+    text-align: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+.sm-photo {
+    width: 30px;
+
+    /* transition: 0.3s ease-out; */
+    padding-right: 15px;
+
+}
+
+.sm-photo:hover {
+    
+    transform: scale(1.2);
+
+}
+
+
+
+
+
+
+
+
+
+/* Food Menu */
+
+
 body {
-    background-color: #F4F6FF;
-    font-family:'Fjalla One', sans-serif;;
-    padding:0 50px;
-    color: #10375C;
+    
+    font-family:'Fjalla One', sans-serif;
+    /* margin: 0; */
+    max-width: 100vw;
+    /* overflow: hidden; */
+
+}
+
+.menu-cont {
+    padding: 0 50px;
 }
 
 .title {
     font-size: 1.5rem;
     margin-top: 50px;
     text-align: center;
-    
-    
+
+
 
 }
 
@@ -18,28 +291,28 @@ body {
     height: 4px;
     width: 300px;
     background-color: #F3C623;
-   margin: auto;
-    
+    margin: auto;
+
 }
 
 .subtitle {
     text-align: center;
-    
-    
+
+
 }
 
 .header-items {
     display: flex;
     justify-content: space-between;
-    
+
     border-bottom: solid 2px;
     border-color: #F3C623;
 }
 
 .menu-sale {
     display: flex;
-    
-    
+
+
 }
 
 .food-images {
@@ -53,7 +326,7 @@ body {
 }
 
 .photo {
-    width:300px;
+    width: 300px;
     height: 300px;
     border: solid 4px;
     border-color: #F3C623;
@@ -70,11 +343,11 @@ body {
 
 .bar {
     border: solid 4px;
-    border-color:#10375C ;
+    border-color: #10375C;
     width: 300px;
     text-align: center;
     margin: 50px;
-   
+
 }
 
 .menu-item {
@@ -87,4 +360,46 @@ body {
 
 .menu-sucre {
     display: flex;
+}
+
+
+
+/* Coffee Menu */
+
+
+
+.coffee-menu {
+    display: flex;
+}
+
+.menu-section {
+
+    width: 300px;
+    margin: 50px;
+    display: flex;
+    flex-direction: column;
+}
+
+.coffee-type {
+
+    display: flex;
+    justify-content: space-between;
+    padding-left: 20px;
+}
+
+.coffee-desc {
+    padding-left: 20px;
+    margin-top: -10px;
+    font-size: 0.8rem;
+}
+
+
+.heading {
+    border-bottom: solid 2px #F3C623;
+    display: flex;
+    justify-content: space-between;
+    border-top: solid 2px #F3C623;
+    margin: 20px;
+    padding: 20px 0 0 0;
+
 }
