--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ nav {
    
     font-family: 'Advent Pro', sans-serif;
     
-    font-size: 2rem;
+    font-size: 2.5rem;
     text-align: center;
     padding: 50px 100px 0 100px;
 
@@ -175,12 +175,14 @@ nav {
     
     font-size: 1rem;
     margin:30px;
-    padding:5px 30px;
+    padding:5px 0px;
     border-radius: 15px;
     border: 3px solid #BE9639;
     text-decoration: none;
     color: black;
     transition: 0.5s;
+    width:100px;
+    text-align: center;
 }
 
 .menu-btn:hover {
